--- a/LoginProject/Views/Shared/_Layout.cshtml
+++ b/LoginProject/Views/Shared/_Layout.cshtml
@@ -31,12 +31,12 @@
 
                                 <i class="bi bi-basket-fill"></i>
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                    1
-                                   @* @SessionHelper.Count*@
+                                  
+                                    @SessionHelper.Count 
                                 </span>
                             </a>
                         </li>
-                         @if (Data.LoginUser == null)
+                         @if (Data.LoginUser.Id == 0     )
                         {
                             <li class="nav-item">
                                 <a asp-action="Login" asp-controller="Account" class="nav-link">Login</a>
